--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
-    
+  <body style="padding:0; margin:0; -webkit-text-size-adjust:none; -ms-text-size-adjust:100%; background-color:#e8e8e8; font-family: 'Lato', sans-serif; font-size: 16px;">
+    <!-- full email -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <!-- left cell -->
+        <td bgcolor="#ebebeb" style="font-size: 0px;">&zwnj;</td>
+
+        <!-- email content -->
+        <td align="center" width="600" bgcolor="#ffffff">
+
+          <table width="100%" border="0" cellspacing="0" cellpadding="0">
+           <tbody>
+          <!-- enter email content here-->
+             <tr>
+               <td>
+               <!-- start of header section -->
+                 <table class="header" style="padding: 20px 15px 15px 15px; background-color: #f5f7fa;">
+                   <tr>
+                     <td>
+                       <img src="img/Delta-Logo.png" alt="Delta logo" align="left" width="75%">
+                     </td>
+                     <td align="right" width="50%" style="text-align: right;">
+                       <p style="margin: 0; color: #0b1f66; font-size: 14px;">
+                        <span style="text-decoration: underline;">#5554058000</span> <br> SkyMiles® Member <br> 7,093 Miles
+                       </p>
+                     </td>
+                   </tr>
+                 </table>
+                 <!-- end of header section -->
+               </td>
+             </tr>
+           </tbody>
+          </table>
+        </td>
+        <!-- right cell -->
+        <td bgcolor="#ebebeb" style="font-size: 0px;">&zwnj;</td>
+      </tr>
+    </table>
   </body>
 </html>
