hero and letter section

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
              <tr>
                <td>
                <!-- start of header section -->
-                 <table class="header" style="padding: 20px 15px 15px 15px; background-color: #f5f7fa;">
+                 <table class="header-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 15px 15px 15px 15px; background-color: #f5f7fa;">
                    <tr>
                      <td>
                        <img src="img/Delta-Logo.png" alt="Delta logo" align="left" width="75%">
@@ -34,6 +34,77 @@
                    </tr>
                  </table>
                  <!-- end of header section -->
+
+                 <!-- start of hero img -->
+                 <table class="hero-section" width="100%" border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td>
+                      <img src="img/Hero-img.jpg" alt="Your update from Ed. Keep climbing together">
+                    </td>
+                  </tr>
+                 </table>
+                 <!-- end of hero img -->
+
+                 <!-- start of letter section -->
+                 <table class="letter-section" width="100%" border="0" cellspacing="0" cellpadding="0">
+                   <tr>
+                     <td>
+                      <p>Dear Courtney,</p>
+
+                      <p>
+                        I recently received an inspiring note from a medical professional who flew Delta to perform three lifesaving surgeries on 
+                        children. It was a reminder that travel continues to be essential for many who are on the front lines responding to this pandemic, 
+                        and why, if you must fly, our work to transport you safely is more important than ever.
+                      </p>
+
+                      <p>
+                        For those of you who cannot travel right now, our mission is to serve you by helping with the crisis response. In addition to flying
+                        medical volunteers free of charge to some of the hardest-hit areas in the U.S., Delta has joined brands across the globe in partnering
+                        with health and community organizations. That includes our cargo division transporting critical supplies where they are most needed, like
+                        the 500,000 surgical masks delivered to Michigan last weekend for nurses and doctors on the front lines. With changes to onboard and Delta 
+                        Sky Club® offerings, we donated 200,000 pounds of food to hospitals, food banks and other community groups, while face shields manufactured
+                        by Delta Flight Products are being used by hospital workers in New York and Atlanta.
+                      </p>
+
+                      <p>
+                        Through it all, I am humbled by the ways you continue to heal our communities and embody the hope we need today. When you must travel:
+                      </p>
+
+                      <ul>
+                        <li>
+                          Your safety remains paramount. Following the CDC’s recommendation, we’re providing face masks to employees,
+                          and I encourage you to bring a face mask for your own protection. And new initiatives will make space for 
+                          safer travel through June 30 by blocking middle seats, limiting the number of people on each flight, boarding 
+                          by rows from back to front, and pausing automatic advanced Medallion® Complimentary Upgrades to process them at the gate.
+                        </li>
+
+                        <li>
+                          Flexibility is important in uncertain times. Since the last update, change fee waivers have been extended to allow travel 
+                          through Sept. 30, 2022, for customers who have upcoming travel booked as of today through Sept. 30, 2020, or have canceled 
+                          travel from flights in March through Sept. 30, 2020.
+                        </li>
+                      </ul>
+
+                      <p>
+                        We remain committed to taking care of the Delta people who take care of you, and are thankful to members of Congress, 
+                        the President and the Administration for recognizing the importance of our people and industry via the CARES Act payroll 
+                        protection. This bipartisan support will help ensure that air travel plays a leading role in the recovery once the pandemic 
+                        is contained, and that our people will be positioned to serve you when you’re ready to resume flying.
+                      </p>
+
+                      <p>
+                        As everyone adapts to this new normal, many of you are posting on social media reminiscing about your favorite 
+                        destinations and where you hope to travel with us next. Thank you for those shared moments. We can’t wait for 
+                        the day when we’re taking you on your next adventure and appreciate your support.
+                      </p>
+
+                      <p>
+                        Sincerely,
+                      </p>
+                     </td>
+                   </tr>
+                 </table>
+                 <!-- end of letter section -->
                </td>
              </tr>
            </tbody>
