--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <title>We're in This Together: Your Update From Ed</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
-  <body style="padding:0; margin:0; -webkit-text-size-adjust:none; -ms-text-size-adjust:100%; background-color:#e8e8e8; font-family: 'Lato', sans-serif; font-size: 16px;">
+  <body style="padding:0; margin:0; -webkit-text-size-adjust:none; -ms-text-size-adjust:100%; background-color:#e8e8e8; font-family: 'Open Sans', sans-serif; font-size: 16px; color: #0b1f66;">
     <!-- full email -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
@@ -27,7 +28,7 @@
                        <img src="img/Delta-Logo.png" alt="Delta logo" align="left" width="75%">
                      </td>
                      <td align="right" width="50%" style="text-align: right;">
-                       <p style="margin: 0; color: #0b1f66; font-size: 14px;">
+                       <p style="margin: 0; font-size: 14px;">
                         <span style="text-decoration: underline;">#5554058000</span> <br> SkyMiles® Member <br> 7,093 Miles
                        </p>
                      </td>
@@ -46,7 +47,7 @@
                  <!-- end of hero img -->
 
                  <!-- start of letter section -->
-                 <table class="letter-section" width="100%" border="0" cellspacing="0" cellpadding="0">
+                 <table class="letter-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 25px 50px 25px 50px; line-height: 27px;">
                    <tr>
                      <td>
                       <p>Dear Courtney,</p>
@@ -59,10 +60,10 @@
 
                       <p>
                         For those of you who cannot travel right now, our mission is to serve you by helping with the crisis response. In addition to flying
-                        medical volunteers free of charge to some of the hardest-hit areas in the U.S., Delta has joined brands across the globe in partnering
+                        <a href="https://news.delta.com/supporting-front-lines-delta-expands-offer-free-medical-volunteer-travel-new-york?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_medicalvolunteers" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">medical volunteers</a> free of charge to some of the hardest-hit areas in the U.S., Delta has joined brands across the globe in partnering
                         with health and community organizations. That includes our cargo division transporting critical supplies where they are most needed, like
-                        the 500,000 surgical masks delivered to Michigan last weekend for nurses and doctors on the front lines. With changes to onboard and Delta 
-                        Sky Club® offerings, we donated 200,000 pounds of food to hospitals, food banks and other community groups, while face shields manufactured
+                        the <a href="https://www.wzzm13.com/article/news/health/coronavirus/delta-flight-carrying-500000-surgical-masks-arrives-at-ford-airport/69-77629db2-0898-42f2-bdbe-f89ba70667df?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_masks" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">500,000 surgical masks</a> delivered to Michigan last weekend for nurses and doctors on the front lines. With changes to onboard and Delta 
+                        Sky Club® offerings, we donated <a href="https://news.delta.com/delta-has-200000-pounds-food-we-cant-use-so-were-giving-it-people-need?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_food" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">200,000 pounds of food</a> to hospitals, food banks and other community groups, while <a href="https://news.delta.com/delta-flight-products-manufacture-personal-protective-equipment-help-healthcare-workers?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_faceshield" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">face shields</a> manufactured
                         by Delta Flight Products are being used by hospital workers in New York and Atlanta.
                       </p>
 
@@ -72,23 +73,23 @@
 
                       <ul>
                         <li>
-                          Your safety remains paramount. Following the CDC’s recommendation, we’re providing face masks to employees,
-                          and I encourage you to bring a face mask for your own protection. And new initiatives will make space for 
-                          safer travel through June 30 by blocking middle seats, limiting the number of people on each flight, boarding 
+                          <span style="font-weight: 700;">Your safety remains paramount.</span> Following the CDC’s recommendation, we’re providing face masks to employees,
+                          and I encourage you to bring a face mask for your own protection. And new initiatives will <a href="https://news.delta.com/delta-blocking-middle-seats-pausing-automatic-advance-upgrades-and-more-enable-social-distancing?utm_source=Delta+News+Hub+Updates&utm_campaign=aeca1c6bc5-EMAIL_CAMPAIGN_2020_04_08_02_07&utm_medium=email&utm_term=0_be3f884155-aeca1c6bc5-160410978?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_makingspace" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">make space for 
+                          safer travel</a> through June 30 by blocking middle seats, limiting the number of people on each flight, boarding 
                           by rows from back to front, and pausing automatic advanced Medallion® Complimentary Upgrades to process them at the gate.
                         </li>
-
+                        <br>
                         <li>
-                          Flexibility is important in uncertain times. Since the last update, change fee waivers have been extended to allow travel 
-                          through Sept. 30, 2022, for customers who have upcoming travel booked as of today through Sept. 30, 2020, or have canceled 
+                          <span style="font-weight: 700;">Flexibility is important in uncertain times.</span> Since the last update, change fee waivers have been extended to allow travel 
+                         <a href="https://www.delta.com/global/en/advisories/coronavirus-travel/overview?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_sept2020" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">through Sept. 30, 2022</a>, for customers who have upcoming travel booked as of today through Sept. 30, 2020, or have canceled 
                           travel from flights in March through Sept. 30, 2020.
                         </li>
                       </ul>
 
                       <p>
                         We remain committed to taking care of the Delta people who take care of you, and are thankful to members of Congress, 
-                        the President and the Administration for recognizing the importance of our people and industry via the CARES Act payroll 
-                        protection. This bipartisan support will help ensure that air travel plays a leading role in the recovery once the pandemic 
+                        the President and the Administration for recognizing the importance of our people and industry via the CARES Act <a href="https://news.delta.com/ed-bastian-memo-protecting-our-future?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_payroll" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">payroll 
+                        protection</a>. This bipartisan support will help ensure that air travel plays a leading role in the recovery once the pandemic 
                         is contained, and that our people will be positioned to serve you when you’re ready to resume flying.
                       </p>
 
