--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
           <table width="100%" border="0" cellspacing="0" cellpadding="0">
            <tbody>
-          <!-- enter email content here-->
+          <!-- start of email content -->
              <tr>
                <td>
                <!-- start of header section -->
@@ -78,7 +78,9 @@
                           safer travel</a> through June 30 by blocking middle seats, limiting the number of people on each flight, boarding 
                           by rows from back to front, and pausing automatic advanced Medallion® Complimentary Upgrades to process them at the gate.
                         </li>
+
                         <br>
+
                         <li>
                           <span style="font-weight: 700;">Flexibility is important in uncertain times.</span> Since the last update, change fee waivers have been extended to allow travel 
                          <a href="https://www.delta.com/global/en/advisories/coronavirus-travel/overview?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_sept2020" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">through Sept. 30, 2022</a>, for customers who have upcoming travel booked as of today through Sept. 30, 2020, or have canceled 
@@ -102,12 +104,64 @@
                       <p>
                         Sincerely,
                       </p>
+
+                      <img src="img/signature.png" alt="Ed's signature" width="30%">
+
+                      <p style="font-weight: 700;">Ed Bastian<br> <span style="font-weight: 400; text-transform: uppercase;">ceo</span></p>
                      </td>
                    </tr>
                  </table>
                  <!-- end of letter section -->
+
+                 <!-- start of update center section -->
+                 <table class="update-center-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 25px 30px 30px 30px; line-height: 27px;">
+                  <tr>
+                    <td style="border: 4px solid #0b1f66; padding: 30px 80px 30px 80px; text-align: center;">
+                      <h2 style="text-transform: capitalize; font-size: 20px; margin: 0; padding-bottom: 10px;">coronavirus update center:</h2>
+                      <a href="https://www.delta.com/us/en/coronavirus-update-center/overview?mkcpgn=EM_MKTG_CPIN_CL_200414_AA900705_A01A_P0_BTN" target="_blank" style="font-weight: 700; color: #1155cc; text-decoration: none;">View the latest information and guidance ></a>
+                    </td>
+                  </tr>
+                 </table>
+                 <!-- end of update center -->
+
+                 <!-- start of footer section-->
+
+                 <!-- start of logo img -->
+                 <table class="footer-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 25px 50px 0px 50px; background-color: #f5f7fa;">
+                   <tr>
+                     <td align="center" style="padding: 20px 0 30px 0;">
+                      <img src="img/Delta-Logo2.png" alt="Delta logo" width="30%">
+                     </td>
+                   </tr>
+                 </table>
+                 <!-- end of logo img -->
+
+                 <!-- start of footer menu -->
+                 <table class="footer-menu-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 0 50px 70px 50px; background-color: #f5f7fa;">
+                  <tr style="text-align: center;">
+                    <td style="width: 25%;">
+                     <a href="" style="text-decoration: none; color: #4a4a4a; text-transform: capitalize; text-align: center;">need help?</a> 
+                    </td>
+
+                    <td style="width: 25%;">
+                      <a href="" style="text-decoration: none; color: #4a4a4a; text-transform: capitalize; text-align: center;">flight deals</a> 
+                     </td>
+
+                     <td style="width: 25%;">
+                      <a href="" style="text-decoration: none; color: #4a4a4a; text-transform: capitalize; text-align: center;">earn miles</a> 
+                     </td>
+
+                     <td style="width: 25%;">
+                      <a href="" style="text-decoration: none; color: #4a4a4a; text-transform: capitalize; text-align: center;">give back</a> 
+                     </td>
+                  </tr>
+                 </table>
+                 <!-- end of footer menu -->
+
+                 <!-- end of footer section-->
                </td>
              </tr>
+             <!-- end of email content -->
            </tbody>
           </table>
         </td>
