--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+      @media screen and (max-width: 600px) {
+        .hero-section img {
+          max-width: 100%;
+        }
+      }
+    </style>
   </head>
   <body style="padding:0; margin:0; -webkit-text-size-adjust:none; -ms-text-size-adjust:100%; background-color:#e8e8e8; font-family: 'Open Sans', sans-serif; font-size: 16px; color: #0b1f66;">
     <!-- full email -->
@@ -137,7 +144,7 @@
                  <!-- end of logo img -->
 
                  <!-- start of footer menu -->
-                 <table class="footer-menu-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 0 50px 70px 50px; background-color: #f5f7fa;">
+                 <table class="footer-menu-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 0 50px 50px 50px; background-color: #f5f7fa;">
                   <tr style="text-align: center;">
                     <td style="width: 25%;">
                      <a href="" style="text-decoration: none; color: #4a4a4a; text-transform: capitalize; text-align: center;">need help?</a> 
@@ -158,6 +165,67 @@
                  </table>
                  <!-- end of footer menu -->
 
+                 <!-- start of social icons section -->
+                 <table class="social-section" align="center" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 0 50px 30px 50px; background-color: #f5f7fa;">
+                   <tr>
+                     <td>
+                      <hr style="margin: 0; color: #7c828a; opacity: 20%;">
+                     </td>
+                   </tr>
+                 </table>
+                 <!--- social icons -->
+                 <table class="social-icons-section" align="center" width="100%" border="0" cellspacing="0" cellpadding="0" style="background-color: #f5f7fa; padding: 0 50px 20px 50px;">
+                  <tr align="center">
+                    <td class="icon" style="padding: 0; display: inline-block;">
+                     <a href="https://www.facebook.com/delta" target="_blank" style="text-decoration: none;">
+                       <img src="img/Facebook-Icon.png" alt="facebook.com icon" style="width: 40px; padding: 0 15px;">
+                     </a>
+                    </td>
+                    <td class="icon" style="padding:0; display: inline-block;">
+                     <a href="https://twitter.com/delta" target="_blank" style="text-decoration: none;">
+                      <img src="img/Twitter-Icon.png" alt="facebook.com icon" style="width: 40px;">
+                    </a>
+                   </td>
+                   <td class="icon" style="padding: 0; display: inline-block;">
+                     <a href="https://www.instagram.com/delta/" target="_blank" style="text-decoration: none;">
+                       <img src="img/Instagram-Icon.png" alt="facebook.com icon" style="width: 40px; padding: 0 15px;">
+                     </a>
+                   </td>
+                  </tr>
+                 </table>
+
+                 <table class="social-section" align="center" width="100%" border="0" cellspacing="0" cellpadding="0" style="background-color: #f5f7fa; padding: 0 50px 50px 50px; font-size: 13px; text-transform: capitalize;">
+                  <tr>
+                    <td align="center">
+                      <a href="" target="_blank" style="text-decoration: none; color: #7c828a;">email preferences</a> 
+                      <span style="color: #7c828a;">|</span>
+                      <a href="" target="_blank" style="text-decoration: none; color: #7c828a;">privacy policy</a>
+                    </td>
+                  </tr>
+                 </table>
+                 <!-- end of social icons section -->
+
+                 <table class="social-section" align="center" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 0 50px 30px 50px; background-color: #f5f7fa;">
+                  <tr>
+                    <td>
+                     <hr style="margin: 0; color: #7c828a; opacity: 20%;">
+                    </td>
+                  </tr>
+                </table>
+
+                <table class="unsubcribe-section" align="center" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 0 50px 15px 50px; background-color: #f5f7fa; color: #7c828a; font-size: 10px;">
+                  <tr>
+                    <td>
+                     <p>
+                      This email was sent to: <a href="#" target="_blank">Courtneyc148@gmail.com</a>
+                     </p>
+                     <p style="width: 50%;">
+                      © 2020 Delta Air Lines, Inc. All rights reserved. <br>
+                      Delta Blvd. P.O. Box 20706 • Atlanta, GA 30320-6001
+                     </p>
+                    </td>
+                  </tr>
+                </table>
                  <!-- end of footer section-->
                </td>
              </tr>
