--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,9 @@
               <table class="hero-section" width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td>
-                    <img src="https://i.postimg.cc/9M3cnzvx/Hero-img.jpg" alt="Your update from Ed. Keep climbing together">
+                    <a href="https://www.delta.com/us/en/travel-update-center/overview" target="_blank" style="text-decoration: none;">
+                      <img src="https://i.postimg.cc/9M3cnzvx/Hero-img.jpg" alt="Your update from Ed. Keep climbing together">
+                    </a>
                   </td>
                 </tr>
                </table>
@@ -120,7 +122,7 @@
               <table class="letter-section" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 25px 50px 25px 50px; line-height: 27px;">
                 <tr>
                   <td>
-                   <p>Dear Courtney,</p>
+                   <p>Dear David,</p>
 
                    <p>
                      I recently received an inspiring note from a medical professional who flew Delta to perform three lifesaving surgeries on 
@@ -328,7 +330,7 @@
                       <tr>
                         <td>
                          <p>
-                          This email was sent to: <a href="#" target="_blank">Courtneyc148@gmail.com</a>
+                          This email was sent to: <a href="#" target="_blank">YourName@Email.com</a>
                          </p>
                          <p style="width: 50%;">
                           © 2020 Delta Air Lines, Inc. All rights reserved. <br>
